# gtest-template

./: CMakeLists.txt  README.md  main.cpp
